--- a/font-original.css
+++ b/font-original.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.bunny.net/css?family=bakbak-one:400);
+
 @font-face {
   font-family: "Nikumaru";
   src: url("./font/nikumaru.otf") format("opentype");
