--- a/font.css
+++ b/font.css
@@ -1,1 +1,79 @@
-@import url(https://fonts.bunny.net/css?family=bakbak-one:400);
+/* Importadas por mi */
+@import url(https://fonts.bunny.net/css?family=abeezee:400|aboreto:400|abyssinica-sil:400|aclonica:400|acme:400|alata:400|alegreya:400|alfa-slab-one:400|alkatra:400|allan:400|anonymous-pro:400|antic:400|atma:400|balsamiq-sans:400|bangers:400|boogaloo:400|bubblegum-sans:400|caladea:400|carter-one:400|caveat-brush:400|comfortaa:400|delicious-handrawn:400|economica:400|faster-one:400|fira-code:400,600|fredoka-one:400|fugaz-one:400|galada:400|galindo:400|inconsolata:400,600|kaushan-script:400|merienda-one:400|roboto-mono:400|source-code-pro:400|vt323:400);
+
+@font-face {
+  font-family: "Nikumaru";
+  src: url("./font/nikumaru.otf") format("opentype");
+}
+@font-face {
+  font-family: "Mamelon";
+  src: url("./font/Mamelon4.woff2") format("woff2");
+}
+@font-face {
+  font-family: "YasashisaB";
+  src: url("./font/YasashisaB.ttf") format("truetype");
+}
+@font-face {
+  font-family: "HuiFont29";
+  src: url("./font/HuiFont29.ttf") format("truetype");
+}
+@font-face {
+  font-family: "MkPOP";
+  src: url("./font/851MkPOP_101.ttf") format("truetype");
+}
+@font-face {
+  font-family: "bananaslipplus";
+  src: url("./font/bananaslipplus.otf") format("opentype");
+}
+@font-face {
+  font-family: "katyou";
+  src: url("./font/katyou.ttf") format("truetype");
+}
+@font-face {
+  font-family: "TanukiMagic";
+  src: url("./font/TanukiMagic.ttf") format("truetype");
+}
+@font-face {
+  font-family: "hakidame";
+  src: url("./font/hakidame.TTF") format("truetype");
+}
+@font-face {
+  font-family: "umeboshi";
+  src: url("./font/umeboshi.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Jiyucho";
+  src: url("./font/Jiyucho.otf") format("opentype");
+}
+@font-face {
+  font-family: "HitmoR";
+  src: url("./font/HitmoR.ttf") format("truetype");
+}
+@font-face {
+  font-family: "nishikiteki";
+  src: url("./font/nishikiteki.ttf") format("truetype");
+}
+@font-face {
+  font-family: "KTEGAKI";
+  src: url("./font/KTEGAKI.ttf") format("truetype");
+}
+@font-face {
+  font-family: "JKGL";
+  src: url("./font/JKGL.ttf") format("truetype");
+}
+@font-face {
+  font-family: "OhisamaFont";
+  src: url("./font/OhisamaFont.ttf") format("truetype");
+}
+@font-face {
+  font-family: "nukamiso";
+  src: url("./font/nukamiso.ttf") format("truetype");
+}
+@font-face {
+  font-family: "genkai";
+  src: url("./font/genkai.ttf") format("truetype");
+}
+@font-face {
+  font-family: "CP";
+  src: url("./font/CP.otf") format("opentype");
+}
