nuevos cambios en archivo fonts

--- a/font.css
+++ b/font.css
@@ -77,3 +77,7 @@
   font-family: "CP";
   src: url("./font/CP.otf") format("opentype");
 }
+@font-face {
+  font-family: "Bangers2";
+  src: url("./font/Bangers-Regular.ttf") format("truetype");
+}
