cambios en fuentes

--- a/font.css
+++ b/font.css
@@ -1,7 +1,5 @@
 /* Importadas por mi */
-@import url(https://fonts.bunny.net/css?family=abeezee:400|aboreto:400|abyssinica-sil:400|aclonica:400|acme:400|alata:400|alegreya:400|alfa-slab-one:400|alkatra:400|allan:400|anonymous-pro:400|antic:400|atma:400|balsamiq-sans:400|boogaloo:400|bubblegum-sans:400|caladea:400|carter-one:400|caveat-brush:400|comfortaa:400|delicious-handrawn:400|economica:400|faster-one:400|fira-code:400,600|fredoka-one:400|fugaz-one:400|galada:400|galindo:400|inconsolata:400,600|kaushan-script:400|merienda-one:400|roboto-mono:400|source-code-pro:400|vt323:400);
-
-@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
+@import url(https://fonts.bunny.net/css?family=abeezee:400|aboreto:400|abyssinica-sil:400|aclonica:400|acme:400|alata:400|alegreya:400|alfa-slab-one:400|alkatra:400|allan:400|anonymous-pro:400|antic:400|atma:400|balsamiq-sans:400|bangers:400|boogaloo:400|bubblegum-sans:400|caladea:400|carter-one:400|caveat-brush:400|comfortaa:400|delicious-handrawn:400|economica:400|faster-one:400|fira-code:400,600|fredoka-one:400|fugaz-one:400|galada:400|galindo:400|inconsolata:400,600|kaushan-script:400|merienda-one:400|roboto-mono:400|source-code-pro:400|vt323:400);
 
 @font-face {
   font-family: "Nikumaru";
